-Created counters for making id for articles and repositories (store) -Created logic for creating, adding to public and private list repository (store) -Created logic for creating, adding to public and private list articles (store) -Created views for UserArticleCreate and UserRepositoryCreate -Added transliterate library to project

--- a/src/assets/index.sass
+++ b/src/assets/index.sass
@@ -19,16 +19,16 @@
         height: 30px
         line-height: 30px
         padding: 0 5px
-    span
+    span.badge
       margin: 0
       padding: 0
       @media screen and (max-width: 800px)
         font-size: 12px
     div
       display: flex
-      input
+      .input
         display: block
-        width: 120px
+        width: 150px
         height: 36px
         margin: 0 10px 0 0
         @media screen and (max-width: 800px)
@@ -94,3 +94,8 @@
     height: 22px
     @media screen and (max-width: 800px)
       display: none
+
+.btn-floating
+  position: fixed
+  bottom: 25px
+  right: 25px
