--- a/src/assets/index.sass
+++ b/src/assets/index.sass
@@ -39,11 +39,6 @@
     padding: 15px
     border: 3px solid #e3e3e3
     border-radius: 5px
-    th
-      width: 32%
-      &:first-child
-        width: 4%
-
   .section-2
     grid-area: sec2
     padding: 15px
@@ -57,7 +52,7 @@
 
 
 
-  table.table
+  table.table.highlight.centered
     th, td
       padding: 5px 4px
       height: 47px
